# stathost

./: Cargo.toml  README.md
.github/chatmodes/: rust.chatmode.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  bucket.rs  config.rs  handlers.rs  lib.rs  main.rs  meta.rs
systemd/: README.md  stathost.service  stathost.toml
tests/: integration.rs
