[package]
name = "stathost"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["tokio"] }
futures-util = "0.3.31"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
toml = "0.9.8"
tower-http = { version = "0.6.7", features = ["trace"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
